<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Form Your Notes</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_add">Add Item</string>
    <string name="menu_edit">Edit Item</string>
    <string name="menu_delete">Delete Item</string>
    <string name="menu_save">Save Form</string>
    <string name="menu_edit_account">Edit Account</string>
    <string name="menu_sync">Sync</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="change">Change</string>
    <string name="change_name_to">Change name to</string>
    <string name="change_account">Change account settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_delete_item">Delete Item</string>
    <string name="title_edit_item">Edit Item</string>
    <string name="title_edit_account">Edit account</string>

</resources>