<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_menu_sync"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_sync"/>
    <item
        android:id="@+id/menu_add_item"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="3"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_add"/>
    <item
        android:id="@+id/menu_edit_item"
        android:icon="@drawable/ic_menu_compose"
        android:orderInCategory="4"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_delete_item"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="5"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_edit_account"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_edit_account"/>
    <!-- <item -->
    <!-- android:id="@+id/menu_refresh" -->
    <!-- android:icon="@drawable/ic_action_refresh" -->
    <!-- android:orderInCategory="1" -->
    <!-- android:showAsAction="always" -->
    <!-- android:title="@string/menu_refresh"/> -->
    <!-- <item -->
    <!-- android:id="@+id/menu_search" -->
    <!-- android:icon="@drawable/ic_action_search" -->
    <!-- android:orderInCategory="0" -->
    <!-- android:showAsAction="always" -->
    <!-- android:title="@string/menu_search"/> -->
    <!-- <item -->
    <!-- android:id="@+id/menu_share" -->
    <!-- android:icon="@drawable/ic_menu_share" -->
    <!-- android:orderInCategory="1" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/menu_share"/> -->

</menu>